--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "eslint-plugin-standard": "^4.0.2",
     "mocha": "^8.2.0",
     "nyc": "^15.1.0",
-    "prettier": "^2.1.2",
+    "prettier": "~2.4.1",
     "rollup": "^2.32.1",
     "rollup-plugin-terser": "^7.0.2",
     "unexpected": "^11.15.0",
